product query successful
